--- a/templates/home.html
+++ b/templates/home.html
@@ -31,37 +31,32 @@
                     <div class="card-body">
                         {{ task.task }}
                         <span style="position: relative; float: right;">
-                            <a href="{% url 'mark_as_done' task.pk %}" class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
-                            <a href="{% url 'delete_task' task.id %}" class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                            <a href="{% url 'edit_task' task.id %}" class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
+                            <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                            <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
                         </span>
                     </div>
                 </div>
-                {% endfor %}
+                {% endfor %} 
             </div>
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
                 <!-- List of all the tasks that have completed -->
-                {% for task in completed_tasks %}
                 <div class="card m-1">
                     <div class="card-body">
-                        {{ task.task }}
-                        <span style="position: relative; float: right;">
-                            <a href="{% url 'mark_as_undone' task.pk %}" class="btn btn-danger"><i class="fa fa-times"></i> Mark as Undone</a>
-                        </span>
+                        This is the completed task.
                     </div>
                 </div>
-                {% endfor %}
             </div>
         </div>
         <div class="row">
             <div class="col-md-6 col-lg-6 p-0" style="position: absolute; bottom: 50px;">
                 <!-- To Do Form -->
-                <form action="{% url 'addTask' %}" method="POST">
+                <form action="{% url 'addTask'%}" method='POST'>
                     {% csrf_token %}
                     <div class="form-group">
                         <span style="display: flex;">
-                            <input type="text" name="task" class="form-control" placeholder="Add a task">
+                            <input type="text" name="task"class="form-control" placeholder="Add a task">
                             <button type="submit" class="btn btn-primary" style="width: 200px;"><i class="fa fa-plus"></i> Add</button>
                         </span>
                     </div>
